package aula07.Ex2;

public interface TextReaderInterface {

    public boolean hasNext();

    public String next();
}
