@startuml

title __EX2's Class Diagram__\n

  package aula07.Ex2 {
    class CoderFilter {
        + CoderFilter()
        + next()
        - changeRandomLetters()
    }
  }
  

  package aula07.Ex2 {
    class ReverseFilter {
        + ReverseFilter()
        + next()
    }
  }
  

  package aula07.Ex2 {
    class TermFilter {
        + TermFilter()
    }
  }
  

  package aula07.Ex2 {
    class Test {
        {static} + main()
    }
  }
  

  package aula07.Ex2 {
    class TextReader {
        - file_scanner : Scanner
        + TextReader()
        + hasNext()
        + next()
    }
  }
  

  package aula07.Ex2 {
    abstract class TextReaderDecorator {
        # par : List<String>
        + TextReaderDecorator()
        + hasNext()
        + next()
    }
  }
  

  package aula07.Ex2 {
    interface TextReaderInterface {
        {abstract} + hasNext()
        {abstract} + next()
    }
  }
  

  CoderFilter -up-|> TextReaderDecorator
  ReverseFilter -up-|> TextReaderDecorator
  TermFilter -up-|> TextReaderDecorator
  TextReader -up-|> TextReaderInterface
  TextReaderDecorator -up-|> TextReaderInterface
  TextReaderDecorator o-- TextReaderInterface : this_text_reader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
